[package]
name = "meme_template_client"
version = "4.0.0"
edition = "2021"
description = "Meme Template v4 — Dynamic Vanity ID + SPMP + BLS Rotator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
blstrs = { version = "0.2", features = ["wasm"] }
subtle = "2.5"
borsh = "0.10"

[dependencies.warp_core]
path = "../warp_core"

[features]
default = []
